# pendo-cli

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: pendo-api-historical-yoy-analysis.md
pendo_cli/: __init__.py  __main__.py  cli.py  config.py
pendo_cli/api/: __init__.py  client.py  models.py
pendo_cli/collectors/: __init__.py  base_collector.py
pendo_cli/commands/: __init__.py  base.py  query.py  segment.py
tests/: __init__.py  conftest.py  test_client.py
tests/test_commands/: test_query.py  test_segment.py
